SERVER-43777 Validate cmd with {background:true} should not yield checkpoint cursors